# repo-check

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: checker.rs  cli.rs  delete.rs  main.rs  output.rs  scanner.rs  types.rs
